--- a/conf/app.conf
+++ b/conf/app.conf
@@ -15,9 +15,9 @@ EnableGzip			= true
 
 
 ###################### Fcoin Api设置 ############################
-
-AccessKey 		= 
-SecretKey		= 
+Mac				= 35918ae504ca69dbc59510192cff0d2e
+AccessKey 		= 0a1f889accaf49f598b4eb3537ee450e 
+SecretKey		= 6acc707ccc7d43a8a4cd4c90480f960c 
 
 ###################### 交易设置 #######https://api.fcoin.com/v2/public/symbols#####################
 SymbolMap 	= {"status":0,"data":[{"name":"btcusdt","base_currency":"btc","quote_currency":"usdt","price_decimal":2,"amount_decimal":4},{"name":"ethusdt","base_currency":"eth","quote_currency":"usdt","price_decimal":2,"amount_decimal":4},{"name":"bchusdt","base_currency":"bch","quote_currency":"usdt","price_decimal":2,"amount_decimal":4},{"name":"ltcusdt","base_currency":"ltc","quote_currency":"usdt","price_decimal":2,"amount_decimal":4},{"name":"ftusdt","base_currency":"ft","quote_currency":"usdt","price_decimal":6,"amount_decimal":2},{"name":"fteth","base_currency":"ft","quote_currency":"eth","price_decimal":8,"amount_decimal":2},{"name":"zipeth","base_currency":"zip","quote_currency":"eth","price_decimal":8,"amount_decimal":2},{"name":"etcusdt","base_currency":"etc","quote_currency":"usdt","price_decimal":2,"amount_decimal":4},{"name":"ftbtc","base_currency":"ft","quote_currency":"btc","price_decimal":8,"amount_decimal":2},{"name":"icxeth","base_currency":"icx","quote_currency":"eth","price_decimal":6,"amount_decimal":4},{"name":"omgeth","base_currency":"omg","quote_currency":"eth","price_decimal":6,"amount_decimal":4},{"name":"zileth","base_currency":"zil","quote_currency":"eth","price_decimal":8,"amount_decimal":2},{"name":"btmusdt","base_currency":"btm","quote_currency":"usdt","price_decimal":4,"amount_decimal":2}]}
